2005-04-01  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in (clean-local): 
	Remove tools.jar as well when cleaning up.
	
2005-04-01  Dalibor Topic  <robilad@kaffe.org>
	
	Define __builtin_expected away on gcc < 3.0

	* include/Makefile.am (noinst_HEADERS): Added gccbuiltin.h.

	* include/defs.h: Include gccbuiltin.h.

	* include/gccbuiltin.h: New file. Taken from gcc CVS
	file gcc/gcc/system.h.

	Reported by:  Riccardo Mottola <zuse@libero.it>
	
2005-04-01  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/nio/gnu_java_nio_VMSelector.c (Java_gnu_java_nio_VMSelector_select): 
	Use strerror if strerror_r is not available.

	Reported by:  Michael Franz <mvfranz@gmail.com>,
	              Riccardo Mottola <zuse@libero.it>

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed completed tasks.

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/threads.h (THREADSTACKSIZE): Doubled to fix
	stack size problem with nice's bootstrap.

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	Moved gnu.bytecode into tools.jar to fix problems
	with nice's bootstrap.

	Reported by:  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* kaffe/scripts/javap.in: Add tools.jar to classpath.

	* kaffe/scripts/kaffe.in: Don't add tools.jar to BOOTCLASSPATH.

	* libraries/javalib/Makefile.am.in: (jrelib_DATA) Added tools.jar.
	(JAR_CMD2) Don't add gnu.bytecode and gnu.classpath.tools.javap
	to rt.jar.
	(JAR_CMD7) Put gnu.bytecode and gnu.classpath.tools.javap into
	tools.jar.
	(tools.jar) New target.

2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/linux/md.c: Added missing arm/jit.h include.

	Reported by:  gian paolo ciceri <gp.ciceri@acm.org>
	
2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/linux/md.c: Added missing md.h include.

	Reported by:  gian paolo ciceri <gp.ciceri@acm.org>
	
2005-03-31  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/Makefile.am (libkaffevm_la_DEPENDENCIES): 
	Added libreplace.
