@@ -1,3 +1,8 @@
+2005-04-01  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* kaffe/kaffevm/locks.c
+	(waitCond): Unlock completely the mutex (the lock may be recursive).
+
 2005-04-01  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/Makefile.am.in (clean-local): 
